unpackaged/main/default/objects/Visit__c/fields/Appointment_ID_EMR__c.field-meta.xml
<CustomField>
    <fullName>Appointment_ID_EMR__c</fullName>
    <description>Scheduled appointment ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment ID (EMR)</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>