unpackaged/main/default/objects/Visit__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visits (Department)</relationshipLabel>
    <relationshipName>Visits3</relationshipName>
    <type>Lookup</type>
</CustomField>