unpackaged/main/default/objects/Visit__c/fields/Department_External_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_External_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department External Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>