unpackaged/main/default/objects/Visit__c/fields/Department_Region__c.field-meta.xml
<CustomField>
    <fullName>Department_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>