unpackaged/main/default/objects/Visit__c/fields/Department_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Department_Specialty__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>