unpackaged/main/default/objects/Visit__c/fields/EHP_Host__c.field-meta.xml
<CustomField>
    <fullName>EHP_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who is responsible for looking after the &quot;Executive Health&quot; patient during their visit.</description>
    <inlineHelpText>The person who is responsible for looking after the &quot;Executive Health&quot; patient during their visit.</inlineHelpText>
    <label>EHP Host</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExecutiveHealthVisits</relationshipName>
    <type>Lookup</type>
</CustomField>