unpackaged/main/default/objects/Visit__c/fields/Encounter_ID_EMR__c.field-meta.xml
<CustomField>
    <fullName>Encounter_ID_EMR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Encounter ID (EMR)</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>