unpackaged/main/default/objects/Visit__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MRN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>