unpackaged/main/default/objects/Visit__c/fields/Patient_Class__c.field-meta.xml
<CustomField>
    <fullName>Patient_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>