unpackaged/main/default/objects/Visit__c/fields/Patient_MRN__c.field-meta.xml
<CustomField>
    <fullName>Patient_MRN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient MRN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>