unpackaged/main/default/objects/Visit__c/fields/Primary_Coverage_Financial_Class__c.field-meta.xml
<CustomField>
    <fullName>Primary_Coverage_Financial_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Coverage Financial Class</label>
    <length>254</length>
    <type>Text</type>
</CustomField>