unpackaged/main/default/objects/Visit__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provider for this Visit.  Requires Provider_Id__c</description>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visits (Provider)</relationshipLabel>
    <relationshipName>Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>