unpackaged/main/default/objects/Visit__c/fields/Service_Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Provider Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>