unpackaged/main/default/objects/Visit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Visit or appointment type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Patient</fullName>
            </value>
            <value>
                <fullName>Consult</fullName>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>