unpackaged/main/default/objects/Visit__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <description>Date of visit</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Visit Date</label>
    <type>DateTime</type>
</CustomField>