unpackaged/main/default/objects/Visit__c/fields/Visit_ID_Epic__c.field-meta.xml
<CustomField>
    <fullName>Visit_ID_Epic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Visit ID (Epic)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>