unpackaged/main/default/objects/Visit__c/fields/Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Visit_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visit Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>