unpackaged/main/default/objects/Visit__c/fields/Visit_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type_ID__c</fullName>
    <label>Visit Type ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>