unpackaged/main/default/objects/Visit__c/fields/Visit_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visit Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>