unpackaged/main/default/objects/Visit__c/recordTypes/Scheduled_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Scheduled_Appointment</fullName>
    <active>true</active>
    <label>Scheduled Appointment</label>
</RecordType>