unpackaged/main/default/objects/Visit__c/recordTypes/Visit.recordType-meta.xml
<RecordType>
    <fullName>Visit</fullName>
    <active>true</active>
    <label>Visit</label>
</RecordType>