unpackaged/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Visit_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>